--- a/音乐2.1
+++ b/音乐2.1
@@ -2,6 +2,7 @@ local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
 local tweenService = game:GetService("TweenService")
+local runService = game:GetService("RunService")
 
 if not player:FindFirstChild("PlayerGui") then 
     player:WaitForChild("PlayerGui") 
@@ -15,9 +16,8 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
--- 优化后的辉光效果函数 - 更加细腻的辉光效果
+-- 辉光效果函数
 local function ApplyEnhancedGlowEffect(uiElement, elementType)
-    -- 基础描边
     local baseStroke = Instance.new("UIStroke")
     baseStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
     baseStroke.Color = Color3.fromRGB(0, 0, 0)
@@ -25,40 +25,30 @@ local function ApplyEnhancedGlowEffect(uiElement, elementType)
     baseStroke.Thickness = 1
     baseStroke.Parent = uiElement
 
-    -- 根据元素类型应用不同的辉光效果
     if elementType == "mainFrame" then
-        -- 主框架：四层细腻辉光效果，优化过渡
         local innerGlow = Instance.new("UIStroke")
         innerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        innerGlow.Color = Color3.fromRGB(95, 45, 135)  -- 调整颜色过渡更平滑
-        innerGlow.Transparency = 0.78
-        innerGlow.Thickness = 2.5  -- 减小厚度
+        innerGlow.Color = Color3.fromRGB(90, 40, 130)
+        innerGlow.Transparency = 0.75
+        innerGlow.Thickness = 3
         innerGlow.Parent = uiElement
         
-        local midInnerGlow = Instance.new("UIStroke")
-        midInnerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        midInnerGlow.Color = Color3.fromRGB(125, 65, 185)   -- 中间色调更接近
-        midInnerGlow.Transparency = 0.82
-        midInnerGlow.Thickness = 4.5  -- 减小厚度
-        midInnerGlow.Parent = uiElement
-        
-        local midOuterGlow = Instance.new("UIStroke")
-        midOuterGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        midOuterGlow.Color = Color3.fromRGB(150, 85, 210)  -- 亮紫色，色调更统一
-        midOuterGlow.Transparency = 0.86
-        midOuterGlow.Thickness = 6.5  -- 减小厚度
-        midOuterGlow.Parent = uiElement
+        local midGlow = Instance.new("UIStroke")
+        midGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        midGlow.Color = Color3.fromRGB(130, 60, 190)
+        midGlow.Transparency = 0.82
+        midGlow.Thickness = 5
+        midGlow.Parent = uiElement
         
         local outerGlow = Instance.new("UIStroke")
         outerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        outerGlow.Color = Color3.fromRGB(170, 105, 230)  -- 最外层，更淡的紫色
-        outerGlow.Transparency = 0.90  -- 提高透明度使过渡更自然
-        outerGlow.Thickness = 8.5  -- 减小厚度
+        outerGlow.Color = Color3.fromRGB(160, 80, 220)
+        outerGlow.Transparency = 0.88
+        outerGlow.Thickness = 7
         outerGlow.Parent = uiElement
         
-        return {innerGlow, midInnerGlow, midOuterGlow, outerGlow}
+        return {innerGlow, midGlow, outerGlow}
     else
-        -- 内部元素（输入框、按钮等）：单层薄辉光
         local elementGlow = Instance.new("UIStroke")
         elementGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
         elementGlow.Color = Color3.fromRGB(100, 50, 160)
@@ -70,23 +60,99 @@ local function ApplyEnhancedGlowEffect(uiElement, elementType)
     end
 end
 
+-- 对抗性属性锁定功能
+local BoostProtectionManager = {
+    Enabled = false,
+    ActiveProtections = {}  -- 存储所有活动的保护任务
+}
+
+-- 增强的属性锁定函数
+function BoostProtectionManager:EnableProtection(soundName)
+    if not self.Enabled then return end
+    
+    -- 延迟一段时间等待声音实例创建
+    task.delay(0.5, function()
+        local soundInstance = nil
+        
+        -- 在工作区中查找声音实例
+        for _, obj in ipairs(workspace:GetDescendants()) do
+            if obj:IsA("Sound") and obj.Name == soundName then
+                soundInstance = obj
+                break
+            end
+        end
+        
+        if soundInstance then
+            -- 存储保护任务引用
+            local protectionTask = {}
+            protectionTask.sound = soundInstance
+            protectionTask.running = true
+            
+            -- 启动保护循环
+            protectionTask.thread = task.spawn(function()
+                while protectionTask.running and protectionTask.sound and protectionTask.sound.Parent do
+                    pcall(function()
+                        -- 核心对抗逻辑：持续确保声音不被禁用
+                        protectionTask.sound.Disabled = false
+                        
+                        -- 额外的保护措施：确保声音其他关键属性
+                        protectionTask.sound.Playing = true
+                        protectionTask.sound.Looped = true
+                    end)
+                    task.wait(0.1) -- 每0.1秒执行一次保护
+                end
+            end)
+            
+            self.ActiveProtections[soundName] = protectionTask
+            print("✅ Boost保护已启用: " .. soundName)
+        end
+    end)
+end
+
+-- 停止特定声音的保护
+function BoostProtectionManager:DisableProtection(soundName)
+    if self.ActiveProtections[soundName] then
+        self.ActiveProtections[soundName].running = false
+        self.ActiveProtections[soundName] = nil
+        print("🔒 Boost保护已停止: " .. soundName)
+    end
+end
+
+-- 停止所有保护
+function BoostProtectionManager:StopAllProtections()
+    for soundName, protection in pairs(self.ActiveProtections) do
+        protection.running = false
+    end
+    self.ActiveProtections = {}
+    print("🔒 所有Boost保护已停止")
+end
+
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "TouchUI_"..math.random(1000,9999)
+    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
-    screenGui.Parent = player.PlayerGui
+    
+    local success, err = pcall(function()
+        screenGui.Parent = player.PlayerGui
+    end)
+    
+    if not success then
+        warn("UI父级设置失败: " .. tostring(err))
+        return nil
+    end
 
-    -- ==================== 主容器美化 ====================
+    -- 主容器
     local mainFrame = Instance.new("Frame")
-    mainFrame.Size = UDim2.new(0, 300, 0, 200)
-    mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
+    mainFrame.Size = UDim2.new(0, 320, 0, 220)
+    mainFrame.Position = UDim2.new(0.5, -160, 0.5, -110)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
     mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
+    mainFrame.Visible = true
     mainFrame.Parent = screenGui
-    
+
     -- 主容器渐变效果
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
@@ -98,17 +164,26 @@ local function CreateFullUI()
     
     ApplyRoundedCorners(mainFrame, 12)
     ApplyEnhancedGlowEffect(mainFrame, "mainFrame")
-    
-    -- ==================== 标题栏美化 ====================
+
+    -- 创建内容容器
+    local contentContainer = Instance.new("Frame")
+    contentContainer.Size = UDim2.new(1, 0, 1, 0)
+    contentContainer.Position = UDim2.new(0, 0, 0, 0)
+    contentContainer.BackgroundTransparency = 1
+    contentContainer.BorderSizePixel = 0
+    contentContainer.Visible = true
+    contentContainer.Parent = mainFrame
+
+    -- 标题栏
     local titleBar = Instance.new("Frame")
-    titleBar.Size = UDim2.new(1, -5.1, 0, 30)  -- 恢复到原始尺寸
-    titleBar.Position = UDim2.new(0, 3.5, 0, 2.5)  -- 恢复到原始位置
+    titleBar.Size = UDim2.new(1, -20, 0, 35)
+    titleBar.Position = UDim2.new(0, 10, 0, 10)
     titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
-    titleBar.Parent = mainFrame
+    titleBar.Visible = true
+    titleBar.Parent = contentContainer
     
-    -- 标题栏渐变
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 105, 185)),
@@ -118,23 +193,24 @@ local function CreateFullUI()
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
-    ApplyEnhancedGlowEffect(titleBar, "element")
+    ApplyEnhancedGlowEffect(titleBar, false)
     
     local titleLabel = Instance.new("TextLabel")
-    titleLabel.Size = UDim2.new(1, -45, 1, 0)
+    titleLabel.Size = UDim2.new(1, -50, 1, 0)
     titleLabel.Position = UDim2.new(0, 10, 0, 0)
-    titleLabel.Text = "MUSIC PLAYER♪[made by余客]"
+    titleLabel.Text = "MUSIC PLAYER♪[Boost Edition]"
     titleLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
     titleLabel.TextSize = 14
     titleLabel.Font = Enum.Font.GothamBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
+    titleLabel.Visible = true
     titleLabel.Parent = titleBar
 
-    -- ==================== 控制按钮美化 ====================
+    -- 控制按钮
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
-    closeButton.Position = UDim2.new(1, -7, 0.5, -1)  -- 恢复到原始位置
+    closeButton.Position = UDim2.new(1, -30, 0.5, 0)
     closeButton.AnchorPoint = Vector2.new(1, 0.5)
     closeButton.Text = "×"
     closeButton.Font = Enum.Font.GothamBold
@@ -142,17 +218,20 @@ local function CreateFullUI()
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
     closeButton.BorderSizePixel = 0
+    closeButton.Visible = true
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
-    ApplyEnhancedGlowEffect(closeButton, "element")
+    ApplyEnhancedGlowEffect(closeButton, false)
     
     closeButton.MouseButton1Click:Connect(function()
+        -- 关闭时停止所有保护
+        BoostProtectionManager:StopAllProtections()
         screenGui:Destroy()
     end)
 
     local twinButton = Instance.new("TextButton")
     twinButton.Size = UDim2.new(0, 25, 0, 25)
-    twinButton.Position = UDim2.new(1, -35, 0.5, -1)  -- 恢复到原始位置
+    twinButton.Position = UDim2.new(1, -60, 0.5, 0)
     twinButton.AnchorPoint = Vector2.new(1, 0.5)
     twinButton.Text = "M"
     twinButton.Font = Enum.Font.GothamBold
@@ -160,29 +239,23 @@ local function CreateFullUI()
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
     twinButton.BorderSizePixel = 0
+    twinButton.Visible = true
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
-    ApplyEnhancedGlowEffect(twinButton, "element")
+    ApplyEnhancedGlowEffect(twinButton, false)
 
-    -- ==================== 输入框美化 ====================
+    -- 输入框函数
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
-        container.Size = UDim2.new(sizeX, 0, 0, 28)
+        container.Size = UDim2.new(sizeX, 0, 0, 30)
         container.Position = UDim2.new(posX, 0, posY, 0)
         container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
         container.BorderSizePixel = 0
-        container.Parent = mainFrame
-        
-        -- 输入框渐变背景
-        local inputGradient = Instance.new("UIGradient")
-        inputGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
-            ColorSequenceKeypoint.new(1, Color3.fromRGB(45, 45, 60))
-        })
-        inputGradient.Parent = container
+        container.Visible = true
+        container.Parent = contentContainer
         
         ApplyRoundedCorners(container, 6)
-        ApplyEnhancedGlowEffect(container, "element")
+        ApplyEnhancedGlowEffect(container, false)
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -193,19 +266,22 @@ local function CreateFullUI()
         box.Font = Enum.Font.Gotham
         box.TextSize = 12
         box.PlaceholderColor3 = Color3.fromRGB(180, 180, 200)
+        box.Text = ""
+        box.Visible = true
         box.Parent = container
         
         return box
     end
 
-    local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)  -- 恢复到原始位置
-    local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)   -- 恢复到原始位置
-    local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)    -- 恢复到原始位置
+    -- 创建输入框
+    local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)
+    local volumeBox = CreateInputBox(0.45, "音量 0.1-100", 0.4, 0.05)
+    local pitchBox = CreateInputBox(0.45, "音调 0.1-100", 0.4, 0.55)
 
-    -- ==================== 功能按钮美化 ====================
+    -- 功能按钮函数
     local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
-        btn.Size = UDim2.new(sizeX, 0, 0, 32)
+        btn.Size = UDim2.new(sizeX, 0, 0, 35)
         btn.Position = UDim2.new(posX, 0, posY, 0)
         btn.Text = text
         btn.Font = Enum.Font.GothamSemibold
@@ -214,42 +290,25 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Parent = mainFrame
-        
-        -- 按钮悬停效果
-        btn.MouseEnter:Connect(function()
-            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = Color3.fromRGB(
-                math.min(color.R * 255 + 15, 255),
-                math.min(color.G * 255 + 15, 255),
-                math.min(color.B * 255 + 15, 255)
-            )})
-            tween:Play()
-        end)
-        
-        btn.MouseLeave:Connect(function()
-            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = color})
-            tween:Play()
-        end)
+        btn.Visible = true
+        btn.Parent = contentContainer
         
         ApplyRoundedCorners(btn, 8)
-        ApplyEnhancedGlowEffect(btn, "element")
+        ApplyEnhancedGlowEffect(btn, false)
         return btn
     end
 
-    -- 播放按钮颜色定义
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255)
     local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)
     local playButtonFailureColor = Color3.fromRGB(220, 80, 80)
     
-    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)  -- 恢复到原始位置
-    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))  -- 恢复到原始位置
+    local playButton = CreateStyledButton("播放", 0.05, 0.7, 0.4, playButtonDefaultColor)
+    local stopButton = CreateStyledButton("停止", 0.55, 0.7, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- ==================== 切换按钮美化 ====================
+    -- 切换按钮函数
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
-        btn.Size = UDim2.new(sizeX, 0, 0, 24)
+        btn.Size = UDim2.new(sizeX, 0, 0, 25)
         btn.Position = UDim2.new(posX, 0, posY, 0)
         btn.Text = text
         btn.Font = Enum.Font.Gotham
@@ -258,31 +317,42 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Parent = mainFrame
+        btn.Visible = true
+        btn.Parent = contentContainer
         
         ApplyRoundedCorners(btn, 6)
-        ApplyEnhancedGlowEffect(btn, "element")
+        ApplyEnhancedGlowEffect(btn, false)
         return btn
     end
 
-    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))  -- 恢复到原始位置
-    local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))  -- 恢复到原始位置
+    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
+    
+    -- ==================== 新增的Boost开关 ====================
+    local boostToggle = CreateToggleButton("Boost: OFF", 0.05, 0.85, 0.4, Color3.fromRGB(120, 120, 120)) -- 初始为灰色
+    
+    local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- ==================== 添加分隔线 ====================
+    -- 调整按钮位置以避免重叠
+    modeButton.Position = UDim2.new(0.05, 0, 0.85, 0)
+    boostToggle.Position = UDim2.new(0.55, 0, 0.85, 0)
+
+    -- 分隔线
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
-    separator.Position = UDim2.new(0, 10, 0.58, 0)  -- 恢复到原始位置
+    separator.Position = UDim2.new(0, 10, 0.65, 0)
     separator.BackgroundColor3 = Color3.fromRGB(70, 70, 90)
     separator.BorderSizePixel = 0
-    separator.Parent = mainFrame
+    separator.Visible = true
+    separator.Parent = contentContainer
 
-    -- ==================== 拖动系统 ====================
+    -- 拖动系统
     mainFrame.Active = true
     mainFrame.Draggable = true
 
-    -- ==================== 音频控制系统 ====================
+    -- 音频控制系统
     local soundSystem = {
         LoopEnabled = true,
+        BoostEnabled = false,  -- 新增Boost状态
         ActiveSounds = {},
         RemoteEvent = nil,
         CurrentMode = "auto",
@@ -293,14 +363,7 @@ local function CreateFullUI()
             mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
-        TwinMode = false,
-        
-        -- 新增：防护增强系统配置
-        ProtectionConfig = {
-            Enabled = true,
-            DelayRange = {100, 500}, -- 毫秒
-            SoundNameStrategies = {"natural", "random", "idbased"}
-        }
+        TwinMode = false
     }
     
     local function UpdateModeButton()
@@ -324,36 +387,45 @@ local function CreateFullUI()
         UpdateTwinModeButton()
     end)
     
+    -- Boost开关点击事件
+    boostToggle.MouseButton1Click:Connect(function()
+        soundSystem.BoostEnabled = not soundSystem.BoostEnabled
+        BoostProtectionManager.Enabled = soundSystem.BoostEnabled
+        
+        if soundSystem.BoostEnabled then
+            boostToggle.Text = "Boost: ON"
+            boostToggle.BackgroundColor3 = Color3.fromRGB(255, 255, 0)  -- 激活时为黄色
+            print("🚀 Boost模式已启用")
+        else
+            boostToggle.Text = "Boost: OFF"
+            boostToggle.BackgroundColor3 = Color3.fromRGB(120, 120, 120)  -- 未激活为灰色
+            -- 关闭时停止所有保护
+            BoostProtectionManager:StopAllProtections()
+            print("⚡ Boost模式已关闭")
+        end
+    end)
+    
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- ==================== 增强的音乐控制功能 ====================
-    
-    -- 1. 参数伪装：增强的声音名称生成系统（防止模式检测）
+    -- 音乐控制功能
     local function generateEnhancedSoundName(musicID)
         local prefixes = {"EngineSound", "Vehicleengine", "AmbientTrack", "DEV", "EnvironmentSFX"}
         local suffixes = {"System", "suffer", "Manager", "Player", "Source", "Device"}
         local numbers = {"001", "02", "3", "004", "5"}
         return prefixes[math.random(#prefixes)].."_"..suffixes[math.random(#suffixes)].."_"..numbers[math.random(#numbers)]
     end
-    
-    -- 参数验证与清理函数
+
     local function ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        -- 清理音乐ID格式
-        musicID = tostring(rawMusicID):gsub("%D+", "")
-        
-        -- 严格长度检查
+        local musicID = tostring(rawMusicID):gsub("%D+", "")
         if #musicID < 6 then
-            return nil
+            return nil, nil, nil
         end
-        
-        -- 使用原始默认值（音量1，音调1）
-        volume = tonumber(rawVolume) or 1
-        pitch = tonumber(rawPitch) or 1
-        
-        return musicID, volume, pitch
+        local volume = tonumber(rawVolume) or 1
+        local pitch = tonumber(rawPitch) or 1
+        return musicID, math.clamp(volume, 0.1, 100), math.clamp(pitch, 0.1, 100)
     end
-    
+
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -379,13 +451,14 @@ local function CreateFullUI()
         
         for _, soundID in ipairs(soundsToStop) do
             SafeStopSound(soundID)
+            -- 停止对应的Boost保护
+            BoostProtectionManager:DisableProtection(soundID)
         end
         
         soundSystem.ActiveSounds = {}
         soundSystem.LastSoundName = nil
     end
 
-    -- 增强的播放模式（集成防护措施）
     local function EnhancedMode1_Play(musicID, volume, pitch, loopEnabled)
         if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
             soundSystem.RemoteEvent = nil
@@ -419,6 +492,12 @@ local function CreateFullUI()
         if success then
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
+            
+            -- 如果Boost模式启用，启动保护
+            if soundSystem.BoostEnabled then
+                BoostProtectionManager:EnableProtection(soundName)
+            end
+            
             return true
         else
             soundSystem.RemoteEvent = nil
@@ -426,7 +505,6 @@ local function CreateFullUI()
         end
     end
 
-    -- 修改后的遍历模式（M模式）- 移除随机延迟和停止机制
     local function EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
         local soundName = generateEnhancedSoundName(musicID)
         local playedSuccessfully = false
@@ -445,7 +523,6 @@ local function CreateFullUI()
             return false 
         end
         
-        -- 随机打乱远程事件顺序
         for i = #remoteEvents, 2, -1 do
             local j = math.random(i)
             remoteEvents[i], remoteEvents[j] = remoteEvents[j], remoteEvents[i]
@@ -466,6 +543,11 @@ local function CreateFullUI()
         if playedSuccessfully then
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
+            
+            -- 如果Boost模式启用，启动保护
+            if soundSystem.BoostEnabled then
+                BoostProtectionManager:EnableProtection(soundName)
+            end
         end
         return playedSuccessfully
     end
@@ -475,15 +557,13 @@ local function CreateFullUI()
                EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- ==================== 播放按钮状态反馈系统 ====================
+    -- 播放控制
     local function handlePlayback()
         local rawMusicID = musicIDBox.Text
         local rawVolume = volumeBox.Text
         local rawPitch = pitchBox.Text
         
         local musicID, volume, pitch = ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        
-        -- 如果音乐ID无效，直接触发失败状态
         if not musicID then
             playButton.BackgroundColor3 = playButtonFailureColor
             task.delay(0.5, function()
@@ -501,14 +581,12 @@ local function CreateFullUI()
             success = EnhancedAutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
-        -- 播放按钮状态颜色反馈
         if success then
             playButton.BackgroundColor3 = playButtonSuccessColor
         else
             playButton.BackgroundColor3 = playButtonFailureColor
         end
         
-        -- 0.5秒后恢复默认颜色
         task.delay(0.5, function()
             playButton.BackgroundColor3 = playButtonDefaultColor
         end)
@@ -532,6 +610,22 @@ local function CreateFullUI()
             Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
 
+    -- 辉光效果更新循环
+    local connection
+    connection = runService.Heartbeat:Connect(function()
+        -- 可以在这里添加辉光动画效果
+    end)
+
+    -- 清理函数
+    screenGui.Destroying:Connect(function()
+        if connection then
+            connection:Disconnect()
+        end
+        -- 关闭时停止所有保护
+        BoostProtectionManager:StopAllProtections()
+    end)
+
+    print("✅ 增强版音乐播放器UI已加载 - Boost功能已集成！")
     return screenGui
 end
 
@@ -543,5 +637,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("✅ AC6音乐播放器UI已加载 - 位置已恢复，辉光效果已优化！")
+    print("🎵 音乐播放器已就绪 - 输入音乐ID开始播放！")
 end
