--- a/音乐2.1
+++ b/音乐2.1
@@ -63,18 +63,15 @@ end
 -- 对抗性属性锁定功能
 local BoostProtectionManager = {
     Enabled = false,
-    ActiveProtections = {}  -- 存储所有活动的保护任务
+    ActiveProtections = {}
 }
 
--- 增强的属性锁定函数
 function BoostProtectionManager:EnableProtection(soundName)
     if not self.Enabled then return end
     
-    -- 延迟一段时间等待声音实例创建
     task.delay(0.5, function()
         local soundInstance = nil
         
-        -- 在工作区中查找声音实例
         for _, obj in ipairs(workspace:GetDescendants()) do
             if obj:IsA("Sound") and obj.Name == soundName then
                 soundInstance = obj
@@ -83,23 +80,18 @@ function BoostProtectionManager:EnableProtection(soundName)
         end
         
         if soundInstance then
-            -- 存储保护任务引用
             local protectionTask = {}
             protectionTask.sound = soundInstance
             protectionTask.running = true
             
-            -- 启动保护循环
             protectionTask.thread = task.spawn(function()
                 while protectionTask.running and protectionTask.sound and protectionTask.sound.Parent do
                     pcall(function()
-                        -- 核心对抗逻辑：持续确保声音不被禁用
                         protectionTask.sound.Disabled = false
-                        
-                        -- 额外的保护措施：确保声音其他关键属性
                         protectionTask.sound.Playing = true
                         protectionTask.sound.Looped = true
                     end)
-                    task.wait(0.1) -- 每0.1秒执行一次保护
+                    task.wait(0.1)
                 end
             end)
             
@@ -109,7 +101,6 @@ function BoostProtectionManager:EnableProtection(soundName)
     end)
 end
 
--- 停止特定声音的保护
 function BoostProtectionManager:DisableProtection(soundName)
     if self.ActiveProtections[soundName] then
         self.ActiveProtections[soundName].running = false
@@ -118,7 +109,6 @@ function BoostProtectionManager:DisableProtection(soundName)
     end
 end
 
--- 停止所有保护
 function BoostProtectionManager:StopAllProtections()
     for soundName, protection in pairs(self.ActiveProtections) do
         protection.running = false
@@ -224,7 +214,6 @@ local function CreateFullUI()
     ApplyEnhancedGlowEffect(closeButton, false)
     
     closeButton.MouseButton1Click:Connect(function()
-        -- 关闭时停止所有保护
         BoostProtectionManager:StopAllProtections()
         screenGui:Destroy()
     end)
@@ -293,6 +282,22 @@ local function CreateFullUI()
         btn.Visible = true
         btn.Parent = contentContainer
         
+        btn.MouseEnter:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = Color3.fromRGB(
+                math.min(color.R * 255 + 15, 255),
+                math.min(color.G * 255 + 15, 255),
+                math.min(color.B * 255 + 15, 255)
+            )})
+            tween:Play()
+        end)
+        
+        btn.MouseLeave:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = color})
+            tween:Play()
+        end)
+        
         ApplyRoundedCorners(btn, 8)
         ApplyEnhancedGlowEffect(btn, false)
         return btn
@@ -305,7 +310,7 @@ local function CreateFullUI()
     local playButton = CreateStyledButton("播放", 0.05, 0.7, 0.4, playButtonDefaultColor)
     local stopButton = CreateStyledButton("停止", 0.55, 0.7, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- 切换按钮函数
+    -- 切换按钮函数（调整尺寸以适应新布局）
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 25)
@@ -325,16 +330,10 @@ local function CreateFullUI()
         return btn
     end
 
-    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
-    
-    -- ==================== 新增的Boost开关 ====================
-    local boostToggle = CreateToggleButton("Boost: OFF", 0.05, 0.85, 0.4, Color3.fromRGB(120, 120, 120)) -- 初始为灰色
-    
+    -- 重新调整按钮布局：模式按钮在左，循环和Boost按钮在右
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
-
-    -- 调整按钮位置以避免重叠
-    modeButton.Position = UDim2.new(0.05, 0, 0.85, 0)
-    boostToggle.Position = UDim2.new(0.55, 0, 0.85, 0)
+    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.2, Color3.fromRGB(70, 150, 200))
+    local boostToggle = CreateToggleButton("Boost: OFF", 0.77, 0.85, 0.18, Color3.fromRGB(120, 120, 120))
 
     -- 分隔线
     local separator = Instance.new("Frame")
@@ -352,7 +351,7 @@ local function CreateFullUI()
     -- 音频控制系统
     local soundSystem = {
         LoopEnabled = true,
-        BoostEnabled = false,  -- 新增Boost状态
+        BoostEnabled = false,
         ActiveSounds = {},
         RemoteEvent = nil,
         CurrentMode = "auto",
@@ -394,12 +393,11 @@ local function CreateFullUI()
         
         if soundSystem.BoostEnabled then
             boostToggle.Text = "Boost: ON"
-            boostToggle.BackgroundColor3 = Color3.fromRGB(255, 255, 0)  -- 激活时为黄色
+            boostToggle.BackgroundColor3 = Color3.fromRGB(255, 255, 0)
             print("🚀 Boost模式已启用")
         else
             boostToggle.Text = "Boost: OFF"
-            boostToggle.BackgroundColor3 = Color3.fromRGB(120, 120, 120)  -- 未激活为灰色
-            -- 关闭时停止所有保护
+            boostToggle.BackgroundColor3 = Color3.fromRGB(120, 120, 120)
             BoostProtectionManager:StopAllProtections()
             print("⚡ Boost模式已关闭")
         end
@@ -451,7 +449,6 @@ local function CreateFullUI()
         
         for _, soundID in ipairs(soundsToStop) do
             SafeStopSound(soundID)
-            -- 停止对应的Boost保护
             BoostProtectionManager:DisableProtection(soundID)
         end
         
@@ -493,7 +490,6 @@ local function CreateFullUI()
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
             
-            -- 如果Boost模式启用，启动保护
             if soundSystem.BoostEnabled then
                 BoostProtectionManager:EnableProtection(soundName)
             end
@@ -544,7 +540,6 @@ local function CreateFullUI()
             table.insert(soundSystem.ActiveSounds, soundName)
             soundSystem.LastSoundName = soundName
             
-            -- 如果Boost模式启用，启动保护
             if soundSystem.BoostEnabled then
                 BoostProtectionManager:EnableProtection(soundName)
             end
@@ -621,11 +616,10 @@ local function CreateFullUI()
         if connection then
             connection:Disconnect()
         end
-        -- 关闭时停止所有保护
         BoostProtectionManager:StopAllProtections()
     end)
 
-    print("✅ 增强版音乐播放器UI已加载 - Boost功能已集成！")
+    print("✅ 布局修复版音乐播放器UI已加载！")
     return screenGui
 end
 
@@ -637,5 +631,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("🎵 音乐播放器已就绪 - 输入音乐ID开始播放！")
+    print("🎵 音乐播放器已就绪 - Boost按钮已正确放置在循环按钮右侧！")
 end
